--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -1,6 +1,5 @@
 ---
 ---
-Redovisning kmom02
-=========================
+# Redovisning kmom02
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/02_kmom02.md`.
