--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -1,6 +1,5 @@
 ---
 ---
-Redovisning kmom04
-=========================
+# Redovisning kmom04
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
