--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -1,6 +1,5 @@
 ---
 ---
-Redovisning kmom05
-=========================
+# Redovisning kmom05
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
