--- a/content/redovisning/10_kmom10.md
+++ b/content/redovisning/10_kmom10.md
@@ -1,6 +1,5 @@
 ---
 ---
-Redovisning kmom10
-=========================
+# Redovisning kmom10
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/10_kmom10.md`.
