--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -1,5 +1,38 @@
 ---
+views:
+    byline:
+        region: main
+        template: anax/v2/block/default
+        sort: 2
+        data:
+            meta:
+                type: single
+                route: block/byline
 ---
 # Redovisning kmom02
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/02_kmom02.md`.
+I detta kursmoment så byggde vi om vårt style sheet för att använda oss av LESS, samt göra webbsidan responsive och implementera en meny för mobiltelefonbesökare.
+
+I detta moment introducerades LESS (Leaner Style Sheets) vilket gör det möjligt att implementera funktioner, variabler(konstanter) samt enklare struktur med Parent Selectors.
+
+Det är som natt och dag att använda sig av LESS då jag kan så enkelt ge till exempel all textfärg en variabel och om jag behöver ändra textfärgen senare så behöver jag bara ändra på ett ställe.
+
+LESS-Moduler låter en sedan skapa generella stilregler som kan användas på flera element i style sheet’s.
+Det är ju som att använda funktioner i programmering vilket är en sådan stor tidssparare att det känns fel att inte använda sig av.
+
+I detta moment använde vi också oss av Make filer för att bygga ihop alla LESS filer till CSS style sheet’s.
+Jag har aldrig använt mig av Make filer innan, jag tror inte att jag har använt mig av ett liknande byggvärktyg innan heller.
+
+Då jag inte har använt något annat byggvärktyg innan så kan jag inte jämföra Make till dem men den värkar fungera bra och den är lätt att använda.
+
+När jag använde Make för att kompilera mina LESS filer till CSS så ser det ut som om den först skriver om LESS filerna till CSS och sedan lägger in filerna i en enda CSS fil i den ordningen filerna påkallades.
+
+Sedan gör den samma sak för att skapa en .min.css fil som är en komprimerad CSS fil där alla mellanrum, tomma rader och kommentarer tas bort för att förbättra laddningstiden för sidan.
+
+När jag byggd mitt tema så tänkte jag mest på användbarheten gentemot den själva estetiska designen.
+Jag försökte få det så att texten var läsbar på alla möjliga skärmar och att element inte krockar med varandra.
+
+Från detta moment så är det klart LESS som står ut för mig då det gör CSS kodning så mycket enklare.
+Möjligheten att använda både variabler och funktioner underlättar så mycket.
+
+Att man också kan dela upp sin kod till flera mindre dokument gör det också mycket enklare att felsöka då man oftast behöver bara se på det relevanta dokumentet.
