--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -1,5 +1,41 @@
 ---
+views:
+    byline:
+        region: main
+        template: anax/v2/block/default
+        sort: 2
+        data:
+            meta:
+                type: single
+                route: block/byline
 ---
 # Redovisning kmom03
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+I detta kmom så har jag gjort om min rapport sida för att använda mig av ett vertikalt och ett horisontellt grid.
+Samt lärde vi oss om typsnitt och hur de skiljer sig mot varandra.
+
+Jag har aldrig tidigare jobbat med grid layout tidigare men jag tror att jag kommer att använda denna teknik för alla mina framtida webbsidor.
+
+Att använda sig av det vertikala gridet gjorde uppbyggnaden av hemsidan så mycket enklare en tidigare.
+Att kunna placera element på ett grid istället för att göra det manuellt gör en sådan stor skillnad både när det kommer till tid och utseendet på hemsidan.
+Det är ett så kraftfullt värktyg att jag finner det nästan konstigt att jag aldrig använt det tidigare.
+
+Att använda ett horisontellt grid på andra hand värkar vara ett mindre viktigt verktyg i jämförelse.
+Att all text på sidan skall ligga i samma nivå oberoende på element är förvisso en bra sak i sig, men den värkar i jämförelse som ett mycket svagare verktyg en det vertikala gridet.
+
+nvändningsområdena när man kan märka någon skillnad av att använda ett horisontellt grid är också få i min mening.
+Om man använder sig av avstånd som beror på fontstorleken som em så är det ytters sällan man skulle märka skillnaden, såvida man inte blandar fonter storlekar.
+
+När det kommer till fonterna jag valde så valde jag att använda mig av Baskerville som min font för titlar på grund utav dess seriff.
+Jag föredrar att använda ett serifftypsnitt för titlar då de tenderar att stå ut mer bland texten.
+Jag föredrar Baskerville’s fyrkantiga seriff då det ser mer ut som maskin skriven text en handskriven då det ger en mer modern stil.
+
+För huvuddelen av all text på sidan så valde jag att använda mig av sanserif då det gör texten mera lättläst.
+Jag valde också att använda mig av monospace för kodsnuttar för att göra koden mera lättläst då alla tecken har samma storlek.
+
+Jag blev tvungen att göra om alla moduler och less delar från tidigare då mycket av koden var överflödig med introduktionen av grid i detta moment.
+
+Även responsiviteten behövdes göras om men i min mening så blev det en bättre responsivitet på webbsidan nu än tidigare.
+
+Mitt TIL för detta kmom är definitivt att använda grid layout för att styla hemsidor då jag inte tror jag kan gå tillbaka till hur det var innan.
+Med tanke på hur mycket lättare det gör att skapa fina websidor.
