--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -1,5 +1,30 @@
 ---
 ---
 # Redovisning kmom06
+I detta kmom så kar vi gjort en stydie på designprinciper implementerade på värkliga webbsidor och sedan implementerat både designelement och designprinciper i min design.
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/06_kmom06.md`.
+Jag har haft det väldigt svårt att tänka i termer av designelement och designprinciper då definitionerna av dessa var inte universella så att vad som räknades som designelement eller inte var otydligt.
+
+I läsanvisningarna och artiklarna så använder det olika termer för att benämna dessa element och principer.
+
+I vissa fall så är element eller principer som namnges på hos en källa helt borta från en annan och ersatta med andra element och principer.
+I andra fall så är ett element enligt en källa en designprincip enligt en annan.
+
+Allt detta leder till förvirring och motsägelser till en sådan grad att det är svårt att hålla reda på separationen mellan dem.
+
+Det som stod mest ut från uppgiften att utvärdera designprinciper som webbsidor använder är hur mycket det kämpar med att bryta upp enformig repetition av designelement genom att implementera variation.
+
+Detta stod ut för mig då det kan vara nyttigt för det flesta webbsidor då kod och designregler tenderar att repeteras över hela webbsidan då det är det enklaste och snabbaste sättet att styla en webbsida.
+
+När det gäller implementationen av designelement och designprinciper i min egen design så gick det långsamt framåt då jag som tidigare nämnt hade svårigheter med deras definitioner.
+
+Trotts detta så blev resultatet av min implantation av elementen och principerna i min mening mycket bättre en hur designen såg ut tidigare.
+
+Däremot så blev inte slutresultatet inte så mycket revolutionerade utan mera en evolution av den tidigare designen.
+Jag vet inte om detta stämmer från att jag missförstått hur detta skulle implementeras eller om detta handlade mera om “the final touch”.
+
+Med “the final touch” så menade jag att lägga till små detaljer som förbättrar slutresultatet medans grunden för webbsidan är redan klar.
+
+Det som står ut för mig i detta kmom är hur små förändringar som implementationen av designprinciper kan förbättra slut resultatet av en design.
+
+Till exempel hur en gemensam bakgrund kan skapa en känsla att separata element hör ihop.
