--- a/content/redovisning/10_kmom10.md
+++ b/content/redovisning/10_kmom10.md
@@ -2,4 +2,82 @@
 ---
 # Redovisning kmom10
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/10_kmom10.md`.
+##Uppgift 1
+För min analys av aktuell webbplatsdesign så valde jag att göra analysen om försäkringsbolag då jag personligen fann detta mera intressant då jag inte tänkt på hur deras websidor är designade trots att jag använt dem.
+
+För mitt urval av försäkringsbolag valde jag tre som enbart jobbar med försäkring då jag inte ville påverka mina eventuella slutsatser genom att ta med ett försäkringsbolag som också fungerar som en bank eller pensionsfond.
+
+Detta ledde mig till att välja If, Trygg Hansa och Moderna då dessa var det största sakförsäkringsbolagen inom Sverige som endast jobbade med försäkring.
+
+Sedan när jag tänkte på vad för kriterier jag skulle analysera på dessa webbsidor för att förstå deras aktuella webbplatsdesign så använde jag mig av designelementet färg och sedan designprinciperna som jag använt i min tidigare rapport på designprinciper.
+
+Jag valde dessa designprinciper då jag fann dem lättförståeliga och det fanns god dokumentation för hur dessa principer implementeras både med exempeltext och bilder.
+
+Utförandet gick smidigt fram då jag var sedan tidigare van sedan tidigare analyser att utvärdera en webbplatsdesign enligt dessa designprinciper. Resultatet skrevs sedan ner för varje webbsida för sig.
+
+Sedan i analysen så började det syntes en tydlig trend när jag jämförde resultaten mellan webbsidorna. 	
+Det visade sig att vissa av designprinciperna användes på alla tre webbsidor som studerades medans andra designprinciper ignorerades och resten av designprinciperna implementerades olika mycket eller inte alls beroende på försäkringsbolagets preferenser.
+
+Vidare så hade alla försäkringsbolag som studerats använt sig av ett minimalistiskt färgschema med nyanser av vitt och accentfärger i sin webbplatsdesign vilket också tydde på en klar trend.
+
+##Uppgift 3
+För webbplatsen som är en del av slutprojektet så valde jag att skapa en webbsida för Ludviga Af Solstråle och hennes kompanjoner.
+
+Då det saknades information om vad Ludviga och hennes kompanjoner gör mer än att dem konsulterar med storföretag och att deras företag har mycket hög klass så valde jag att göra en webbsida för dem som om dem är advokater.
+
+För att bygga grunden till webbsidan så valde jag att göra en ny installation av ramverket då min egen installation började bli fylld med onödiga element för detta projekt så det kändes lättast att börja från en ren installation.
+
+För första sidan så valde jag att använda en två kolumns layout med huvudinnehållet i en större kolumn till vänster med välkomstinformation och en flytande bild.
+
+Till höger så finns en mindre kolumn med information om styrelseordförande/grundaren Ludviga Af Solstråle vilket jag har fabricerat samt hur ett porträtt av henne kunde ha set ut.
+
+För bloggen så valde jag att hitta på nyheter som en advokatfirma kan tänkas sig att släppa som att det har vunnit i ett stort rättsärende eller att det har anordnat ett event.
+
+Likt första sidan använder bloggen en tvåkolumnslayout med innehållet till vänster och navigering mellan bloggtillägan och under rubriker till höger.
+
+För om sidan så använde jag endast en kolumn för huvudinnehållet, vidare så använde jag tre kolumner i toppnavigeringen på sidan indelad i grupperna, logga och titeln, navigeringslänkar och mobilmenyn.
+
+Som logga för webbsidan använde jag en public domain icon från icons8 som avbildar en gyllene våg vilket ofta används som symbol för rättvisa.
+
+I footern så använde jag tre kolumner med följande innehåll, en kort sammanfattning av företaget, socialmedia konton och kontaktuppgifter.
+
+##Uppgift 4
+För att bygga ett tema för webbplatsen som skulle passa kundens design så valde jag att börja med att skapa en layout för hur elementen på webbsidan genom att använda mig av ett grid.
+
+För sidor utan sidospalter så är huvudinnehållet tre fjärdedelar av kolumnerna och centrerat på webbsidan.
+För sidor med sidospalt så är huvudinnehållet lika stort men förskjutet till en av sidorna och sidospalten tar upp det resterande utrymmet.
+
+För temat på websidan så valde jag att skapa ett mera minimalistiskt tema då jag tycker att en sådant tema kan framstå mera professionellt en mera komplicerade teman.
+
+För färgschemat så valde jag därför att ändats använda ett begränsat antal färger på webbsidan.
+Dessa var en gul färg som jag valde från loggans vågskålar, en lila färg som är komplementfärgen till den gula loggan för att skapa mera kontrast samt för den lila färgens kopplingar med kunglighet och avslutningsvis svart, vit och en grå färg då det för majoriteten av webbsidan.
+
+För att navigeringen skulle visa att webbsidan är har stil så valde jag att använda mej av ett kursivt typsnitt i navigationen men då jag ville inte påverka läsbarheten på webbsidan använde jag endast detta typsnitt i navigeringen då enstaka ord går att förstå bättre än meningar.
+
+För att headern och footern inte skulle bli enformiga då dem använder endast en bakgrundsfärg men inte göra dem för komplexa så använde jag en gemensam textur som också skapar en enhetlighet på webbsidan.
+
+För att få sidan att stå ut så använde jag en fullskärmsbild som visar en rättegångssal i bakgrunden och en våg medvågskålar i förgrunden.
+Jag valde att göra detta då det gör webbsidan mera tillögonfallande utan att överdriva och framstå amatörmässigt.
+
+##Implementation
+För det mesta så har genomförandet av projektet gått mycket enkelt att genomföra.
+Att utföra analysen gick relativt snabbt och enkelt att utföra då jag vi hade gjort så många liknande rapporter tidigare i kursen vilket har fungerat som träning inför denna analys.
+
+Det gick också smidigt att börja med uppgifter 3 och 4 trots att jag valde att göra en ny installation av ramverket då det kändes smidigare att börja från en ren installation.
+
+Jag fick lite problem med min nya installation då jag behövde modifiera filen, view/anax/v2/ next-previous/deafult.php.
+Jag behövde göra detta då den gav felmeddelanden att nästa och föregående navigeringen på bloggen då den inte fungerade inte om man var på det sista respektive första inlägget.
+
+Dok så gick det relativt enkelt att bygga upp webbsidan när jag väll implementerat min lösning och slutresultatet blev i min mening ganska snyggt.
+
+##Tankar om kursen
+Mina tankar om denna kurs är blandade, dem första tre kmom i denna kurs kändes som att det flöt på relativt bra med bra dokumentation och handledning.
+Den andra halvan av kursen har däremot känts som om jag har behövt släpa mig igenom från kmom till kmom med större och större svårigheter.
+
+Problemet är dock att jag för dessa kmom att jag tror problemet inte har legat hos kmomen själva utan mer i hur mycket jag personligen har intresserat mig i vad som lärts ut.
+
+Ju mera vi gick in på rå design teori desto mera fann jag mig minder intresserad i vad som lärdes ut och desto svårare fann jag uppgifterna trots att det fanns bra dokumentation och handledning.
+
+Däremot så finns det ett undantag vilket är kmom06, i detta kmom så fanns det motsägelsefull information när det kommer till vad definitionen av designelement och designprinciper var vilket skapade bara förvirring.
+
+Därför skulle jag ge denna kursen en endast en 7 då trotts att jag fann denna kurs svår personligen så har jag ändå lärt mig mera om webbdesign än jag skulle trott och om vi inte räknar med kmom6 så har upplägget och exekveringen av kursen fungerat jättebra.
